--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=schedulo
+schedule.topic.arn=arn:aws:sns:us-east-1:277707110624:Schedule
+
+
+# Conexão com o PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/schedule
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA e Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Evita warnings
+spring.jpa.defer-datasource-initialization=true
+
