feat: integrate WebClient to fetch scheduling data from schedulo service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=schedulo
 schedule.topic.arn=arn:aws:sns:us-east-1:277707110624:Schedule
 
+server.port=8081
 
 # Conexão com o PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/schedule
