--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>br.com.Isabela01vSilva</groupId>
 	<artifactId>schedule</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>schedulo</name>
-	<description>Projeto de agendamento Schedule</description>
+	<name>schedule</name>
+	<description>Projeto de agendamento - Schedule</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -68,8 +68,14 @@
 		<dependency>
 			<groupId>com.vladmihalcea</groupId>
 			<artifactId>hibernate-types-60</artifactId>
-			<version>2.21.1</version> <!-- Verifique a versão de acordo com seu Hibernate -->
+			<version>2.21.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
