feat: implementing Spring Batch and WebClient with execution on AWS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ schedule.topic.arn=arn:aws:sns:us-east-1:277707110624:Schedule
 
 server.port=8081
 
+#Projeto Bank
+bank.url=http://localhost:8080
+
 # Conexão com o PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/schedule
 spring.datasource.username=postgres
@@ -17,4 +20,3 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Evita warnings
 spring.jpa.defer-datasource-initialization=true
-
