--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		a isabela é linda
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
